--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<!-- Карточка1 -->
 				<div class="card" style="border:1px solid black">
 					<div class="card-picture">
-						<img src="img/stop-watch-icon.png" alt="значок проект">
+						<img src="img/calculator-icon.png" alt="значок проект">
 					</div>
 					<div class="card-header">
 						<h3>Проектирование</h3>
@@ -106,7 +106,7 @@
 
 		<section id="about_us">
 			<h2 id="about">О НАШЕЙ КОМПАНИИ</h2>
-			<div>
+			<div style="display: flex; justify-content: center; ">
 				<p id="about_us_text">Наша компания работает на рынке медицинского газоснабжения с 2020 года и зарекомендовала себя как надежный партнер для медицинских учреждений. 
 					Мы реализовали свыше 65 контрактов, включая госконтракты по 44 и 223 ФЗ. 
 					Наша команда проводит не только поставку и профессиональную установку газового оборудования, но и инструктаж персонала для обеспечения безопасной и эффективной эксплуатации систем. 
@@ -119,7 +119,7 @@
 				<!-- Карточка1 -->
 				<div class="card">
 					<div class="card-picture">
-						<img src="img/star-icon.png" alt="значок звездочка">
+						<img src="img/star-icon_small.png" alt="значок звездочка">
 					</div>
 					<div class="card-header">
 						<h3>Гарантия качества</h3>
@@ -132,7 +132,7 @@
 				<!-- Карточка2 -->
 				<div class="card" >
 					<div class="card-picture">
-						<img src="img/star-icon.png" alt="значок звездочка">
+						<img src="img/star-icon_small.png" alt="значок звездочка">
 					</div>
 					<div class="card-header">
 						<h3>Индивидуальные решения</h3>
@@ -145,7 +145,7 @@
 				<!-- Карточка3 -->
 				<div class="card">
 					<div class="card-picture">
-						<img src="img/star-icon.png" alt="значок звездочка">
+						<img src="img/star-icon_small.png" alt="значок звездочка">
 					</div>
 					<div class="card-header">
 						<h3>Оперативность</h3>
@@ -157,7 +157,7 @@
 			</div>
 		</section>
 		
-		<section id="projects_done">
+		<section style="margin-bottom: 2rem">
 			
 			<h2 id="done" style="margin-bottom: 1rem;">ВЫПОЛЕНННЫЕ ПРОЕКТЫ:</h2>
 			
@@ -181,9 +181,7 @@
 			<div class="mySlides">
 			  <div class="numbertext">3 / 3</div>
 			  <img class="galary_img" src="imgGalary/фото Газовые Рампы в Шкафах.jpg">
-			  <div class="text">Рампы газовые в металлическом шкафу
-				
-				г.Вологда</div>
+			  <div class="text">Рампы газовые в металлическом шкафу г.Вологда</div>
 			</div>
 	</div>
 	<!-- Next and previous buttons -->
@@ -201,9 +199,9 @@
 		</section>
 		
 		<section id="questions">
-			<h2 style="font-size: large; margin: auto 10%">МЫ ГОТОВЫ ОБСУДИТЬ ВАШИ ПОТРЕБНОСТИ И НАЙТИ ЛУЧШЕЕ РЕШЕНИЕ ДЛЯ ВАС ПО ТЕЛ.</h2>
+			<h2 style="font-size: 2rem; margin: auto 10%">МЫ ГОТОВЫ ОБСУДИТЬ ВАШИ ПОТРЕБНОСТИ И НАЙТИ ЛУЧШЕЕ РЕШЕНИЕ ДЛЯ ВАС ПО ТЕЛ.</h2>
 			
-				<p style="text-align: center"><a style="color: black; font-size:large; font-weight: bold;" href="tel:+79535160092" target="_blank">+7(953)516-00-92</a></p>
+				<p style="text-align: center; margin-bottom: 4rem;"><a style="color: black; font-size: 2rem; font-weight: bold;" href="tel:+79535160092" target="_blank">+7(953)516-00-92</a></p>
 		
 			<!-- <button>Позвонить</button> -->
 		</section>
